external-crates/move/crates/move-compiler/tests/move_check/parser/function_visibility_friend_script.move
module 0x0::M {
    public(friend) public(script) fun f() {}
    public(script) public(friend) fun g() {}
}
